[package]
name = "pkarr-hackathon-lugano25"
version = "0.1.0"
edition = "2024"

[dependencies]
pkarr = { version = "3.8.0", features = ["full"] }
reqwest = "0.12.22"
tokio = { version = "1.0", features = ["full"] }
axum = "0.7"
axum-server = {version = "0.7.2", features = ["tls-rustls-no-provider"]}
hex = "0.4"
